# udify

./: .gitignore  README.md  archive_bert.py  concat_treebanks.py  create_vocabs.py  predict.py  pyproject.toml  pytest.ini  requirements.txt  train.py
.github/workflows/: main.yml
config/: create_vocab.json  create_vocab_sigmorphon.json  udify_base.json
config/archive/bert-base-multilingual-cased/: bert_config.json
config/sigmorphon/multilingual/: udify_bert_sigmorphon_multilingual.json
config/ud/en/: udify_bert_finetune_en_ewt.json
config/ud/multilingual/: udify_bert_finetune_multilingual.json
scripts/: concat_ud_data.sh  conll18_ud_eval.py  download_sigmorphon_data.sh  download_ud_data.sh  evaluate_2019_task2.py
tests/: test_import.py  test_main.py
udify/: __init__.py  util.py
udify/dataset_readers/: __init__.py  conll18_ud_eval.py  evaluate_2019_task2.py  lemma_edit.py  parser.py  sigmorphon_2019_task_2.py  universal_dependencies.py
udify/models/: __init__.py  dependency_decoder.py  tag_decoder.py  udify_model.py
udify/modules/: __init__.py  bert_pretrained.py  residual_rnn.py  scalar_mix.py  text_field_embedder.py  token_characters_encoder.py
udify/optimizers/: __init__.py  ulmfit_sqrt.py
udify/predictors/: __init__.py  predictor.py  text_predictor.py
