[tool.poetry]
name = "unofficial-udify"
packages = [
    { include = "udify" },
]
version = "0.1.2"
description = ""
authors = ["Dan Kondratyuk"]

[tool.poetry.dependencies]
python = ">=3.6.1"
unofficial-allennlp-nightly = "0.9.2"
transformers = "^2.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "<5.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
